src/components/organisms/menu/styles.module.scss
.menu{
    &__section{
        width: 100vw;
        height: 9rem;
        position: fixed;
        display: flex;
        align-items: center;
        z-index: 100;
        background-color: var(--color-white);
        border-bottom: 0.15rem solid var(--color-dark-blue);
        color: var(--color-black);
        transition: all 0.3s ease;
        
        &__hidden{
            transform: translateY(-9rem);
        }

        &__visible{
            transform: none;
        }
        
    }
    &__container{
        max-width: 130rem;
        height: 100%;
        display: flex;
        align-items: center;
        padding: 0rem 5rem;
        margin-left: 30rem;
        
    }
    &__list{
        display: flex;
        gap: 5rem;
        margin-left: 10rem;
        font-size: 1.4rem;
        font-family: 'Roboto';
        font-weight: 400;
        cursor: pointer;
        text-transform: uppercase;
    }
    &__item{
        transition: color 0.3s ease;
        &__underline{
            width: 0%;
            height: 0.15rem;
            background-color: var(--color-dark-blue);
            transition: width 0.5s ease;
        }
        :hover{
            color: var(--color-dark-blue);
            .menu__item__underline{
                width: 100%;
            }
        }
    }
    &__button{
        font-size: 1.4rem;
        font-family: 'Roboto';
        font-weight: 400;
        text-transform: uppercase;
        width: 20rem;
        height: 9rem;
        color: var(--color-white);
        background-color: var(--color-dark-blue);
        margin-left: auto;
        
    }
}

